--- a/Javascript-inicial/Exercicios/EX01/index.html
+++ b/Javascript-inicial/Exercicios/EX01/index.html
@@ -3,27 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" src="style.css">
     <title>Exercicio</title>
 </head>
 <body>
+    <main>
 
     <h1> Exercicio de memorização e treino </h1>
-    <main>
-        <section>
             <h2>Formulário</h2>
             <label for="nome">Nome</label>
             <input placeholder="Digite seu nome">
-            
-
-        </section>
-        <section>
-            <h3> </h3>
-            <label for="nome">Idade</label>
+            <label type="password">Senha</label>
             <input placeholder="Digite  sua senha">
-        </section>
-        <section>
             <button onclick="">login</button>
-        </section>
     </main>
 
 </body>
