--- a/Javascript-inicial/Exercicios/EX02/index.html
+++ b/Javascript-inicial/Exercicios/EX02/index.html
@@ -7,12 +7,15 @@
     <title>BANNER</title>
 </head>
 <body>
-    <h1>THIS IS BANNER</h1>   
+
+    <section>
+        <h1>THIS IS BANNER</h1>
+    </section>   
     
     <main>
         <section>
             <h2>CONTENT AREA</h2> 
         </section>
-    </main>
+
 </body>
 </html>
