--- a/Javascript-inicial/Exercicio1/index.html
+++ b/Javascript-inicial/Exercicio1/index.html
@@ -41,24 +41,24 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="./assets/neyr.jpg" class="d-block w-80" alt="...">
+                <img src="./assets/neyselecao.png" class="d-block w-80" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>First slide label</h5>
-                  <p>Some representative placeholder content for the first slide.</p>
+                  <p>773</p>
+                  <h5>PARTIDAS</h5>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="./assets/neys.jpg" class="d-block w-80" alt="...">
+                <img src="./assets/NEYBARCA 1200x750.webp" class="d-block w-80" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Second slide label</h5>
-                  <p>Some representative placeholder content for the second slide.</p>
+                  <p>479</p>
+                  <h5>GOLS</h5>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="./assets/neyma.jpg" class="d-block w-80" alt="...">
+                <img src="./assets/NJR 1200x750.webp" class="d-block w-80" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Third slide label</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
+                  <p>289</p>
+                  <h5>ASSISTÊNCIAS</h5>
                 </div>
               </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
@@ -76,12 +76,12 @@
       <section id="s2">
         <div class="card">
           <div class="wrap-img-card">
-          <img src="./assets/al hilal.png" alt="logo neyma" width="80px" height="auto">
+          <img src="./assets/palmeiras.png" alt="logo neyma" width="80px" height="auto">
         </div>
           <div class="wrap-info-card">
-            <h3>Brazil</h3>
+            <h3>Santos FC</h3>
 
-            <p>dddd</p>
+            <p></p>
         
         </div>
       </div>
@@ -92,7 +92,7 @@
             <img src="./assets/barça.png" alt="logo neyma" width="80px" height="auto">
           </div>
             <div class="wrap-info-card">
-              <h3>Brazil</h3>
+              <h3>Barcelona FC</h3>
 
               <p>ssss</p>
 
@@ -104,19 +104,19 @@
             <img src="./assets/psg.png" alt="logo neyma" width="80px" height="auto">
           </div>
             <div class="wrap-info-card">
-              <h3>Brazil</h3>
+              <h3>Paris-Saint Germain</h3>
 
-              <p>kkkkk</p>
+              <p></p>
 
           </div>
           </div>
 
         <div class="card">
           <div class="wrap-img-card">
-            <img src="./assets/palmeiras.png" alt="logo neyma" width="80px" height="auto">
+            <img src="./assets/al hilal.png" alt="logo neyma" width="80px" height="auto">
           </div>
           <div class="wrap-img-card">
-            <h4>Santos</h4>
+            <h3>Al Hilal</h3>
 
             <p>vvvv</p>
 
